--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,12 @@ a {
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   @apply leading-heading;
 }
 
@@ -80,4 +85,5 @@ small {
   }
 }
 
-@screen desktop_hd {}
+@screen desktop_hd {
+}
