--- a/pages/index.css
+++ b/pages/index.css
@@ -1,28 +1,22 @@
-* {
-  box-sizing: border-box;
-}
-
 html,
 body {
+  margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
     helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
   color: black;
+  overflow: hidden;
   background-image: linear-gradient(#583fcd, #021945);
-  user-select: none;
-
 }
 
-#root {
+#__next {
   width: 100vw;
   height: 100vh;
-    margin: 0;
-  padding: 0;
   overflow: hidden;
 }
-
-/* canvas {
+canvas {
   position: absolute;
-} */
+}
 
 .scrollArea {
   position: absolute;
