--- a/pages/index.css
+++ b/pages/index.css
@@ -2,10 +2,9 @@
   font-family: 'Graphik';
   src: url('/fonts/Graphik-Bold-Web.woff');
   src: url('/fonts/Graphik-Bold-Web.eot');
-  src: url('/fonts/Graphik-Bold-Web.eot?#iefix')
-  format('embedded-opentype'),
-  url('/fonts/Graphik-Bold-Web.woff2') format('woff2'),
-  url('/fonts/Graphik-Bold-Web.woff') format('woff');
+  src: url('/fonts/Graphik-Bold-Web.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/Graphik-Bold-Web.woff2') format('woff2'),
+    url('/fonts/Graphik-Bold-Web.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
@@ -15,10 +14,9 @@
   font-family: 'Graphik';
   src: url('/fonts/Graphik-Semibold-Web.woff');
   src: url('/fonts/Graphik-Semibold-Web.eot');
-  src: url('/fonts/Graphik-Semibold-Web.eot?#iefix')
-  format('embedded-opentype'),
-  url('/fonts/Graphik-Semibold-Web.woff2') format('woff2'),
-  url('/fonts/Graphik-Semibold-Web.woff') format('woff');
+  src: url('/fonts/Graphik-Semibold-Web.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/Graphik-Semibold-Web.woff2') format('woff2'),
+    url('/fonts/Graphik-Semibold-Web.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -28,10 +26,9 @@
   font-family: 'Graphik';
   src: url('/fonts/Graphik-Medium-Web.woff');
   src: url('/fonts/Graphik-Medium-Web.eot');
-  src: url('/fonts/Graphik-Medium-Web.eot?#iefix')
-  format('embedded-opentype'),
-  url('/fonts/Graphik-Medium-Web.woff2') format('woff2'),
-  url('/fonts/Graphik-Medium-Web.woff') format('woff');
+  src: url('/fonts/Graphik-Medium-Web.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/Graphik-Medium-Web.woff2') format('woff2'),
+    url('/fonts/Graphik-Medium-Web.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -41,10 +38,9 @@
   font-family: 'Graphik';
   src: url('/fonts/Graphik-Regular-Web.woff');
   src: url('/fonts/Graphik-Regular-Web.eot');
-  src: url('/fonts/Graphik-Regular-Web.eot?#iefix')
-  format('embedded-opentype'),
-  url('/fonts/Graphik-Regular-Web.woff2') format('woff2'),
-  url('/fonts/Graphik-Regular-Web.woff') format('woff');
+  src: url('/fonts/Graphik-Regular-Web.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/Graphik-Regular-Web.woff2') format('woff2'),
+    url('/fonts/Graphik-Regular-Web.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
@@ -54,16 +50,14 @@
   font-family: 'Graphik';
   src: url('/fonts/Graphik-Light-Web.woff');
   src: url('/fonts/Graphik-Light-Web.eot');
-  src: url('/fonts/Graphik-Light-Web.eot?#iefix')
-  format('embedded-opentype'),
-  url('/fonts/Graphik-Light-Web.woff2') format('woff2'),
-  url('/fonts/Graphik-Light-Web.woff') format('woff');
+  src: url('/fonts/Graphik-Light-Web.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/Graphik-Light-Web.woff2') format('woff2'),
+    url('/fonts/Graphik-Light-Web.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
   font-display: block;
 }
-
 
 :root {
   --color-blue: #00b5e2;
@@ -85,7 +79,7 @@
 
   --elevation1: 0 1px 4px rgba(35, 40, 48, 0.1), 0 4px 8px rgba(35, 40, 48, 0.1);
   --elevation2: 0 4px 24px rgba(35, 40, 48, 0.06),
-  0 1px 6px rgba(35, 40, 48, 0.1), 0 4px 12px rgba(35, 40, 48, 0.1);
+    0 1px 6px rgba(35, 40, 48, 0.1), 0 4px 12px rgba(35, 40, 48, 0.1);
 }
 
 * {
@@ -96,7 +90,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Graphik", -apple-system, BlinkMacSystemFont, avenir next, avenir,
+  font-family: 'Graphik', -apple-system, BlinkMacSystemFont, avenir next, avenir,
     helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
   color: black;
   overflow: hidden;
