Added contact page

--- a/pages/index.css
+++ b/pages/index.css
@@ -95,10 +95,12 @@ body {
   color: black;
   overflow: hidden;
   transition: background 200ms ease-in-out;
+  height: 100%;
 }
 
 #__next {
   overflow: hidden;
+  height: 100%;
 }
 canvas {
   position: absolute;
@@ -108,6 +110,9 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
   overflow: auto;
 }
 
